--- a/src/debian/control
+++ b/src/debian/control
@@ -2,7 +2,7 @@ Source: opendiamond
 Section: unknown
 Priority: optional
 Maintainer: diamond <diamond@cs.cmu.edu>
-Build-Depends: debhelper (>= 4.0.0), autotools-dev, autoconf, libssl (>= 0.9.7)
+Build-Depends: debhelper (>= 4.0.0), autotools-dev, autoconf, libssl-dev (>= 0.9.7)
 Build-Conflicts: autoconf2.13
 Standards-Version: 3.6.2
 
@@ -10,6 +10,6 @@ Package: opendiamond
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: The OpenDiamond platform for interactive search
- This package provides the Diamond infrastructure and API for building 
- content search applications. 
+ This package provides the Diamond infrastructure and API for building
+ content search applications.
 
