--- a/src/sqlite/Makefile.am
+++ b/src/sqlite/Makefile.am
@@ -1,4 +1,4 @@
 noinst_LTLIBRARIES = libsqlite.la
 
 AM_CPPFLAGS += -DSQLITE_THREADSAFE=1 -fvisibility=hidden
-libsqlite_la_SOURCES = sqlite3.c
+libsqlite_la_SOURCES = sqlite3.c sqlite3.h
