--- a/src/lib/transport/socket/storagestub/Makefile.am
+++ b/src/lib/transport/socket/storagestub/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LTLIBRARIES = libstoragestub.la
 
 libstoragestub_la_SOURCES = sstub_api.c sstub_cntrl.c sstub_conn.c \
-	sstub_data.c sstub_listen.c sstub_impl.h sstub_rpc.c
+	sstub_data.c sstub_listen.c sstub_impl.h
 
 AM_CPPFLAGS += -I$(top_builddir)/lib/transport/socket/common
 
