--- a/src/opendiamond.pc.in
+++ b/src/opendiamond.pc.in
@@ -9,5 +9,5 @@ Description: The OpenDiamond platform for interactive search
 @PKGCONFIG_REQUIRES@: glib-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lopendiamond
-Libs.private: @LIBS@
+Libs.private: @MINIRPC_LIBS@ @LIBS@
 Cflags: -I${includedir}/opendiamond
