--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = libtools libdconfig libdctl liblog libodisk libfilter \
-	libfilterexec libauth transport libsearchlet libscope
+	libfilterexec transport libsearchlet libscope
 
 lib_LTLIBRARIES = libopendiamond.la
 
@@ -9,7 +9,7 @@ libopendiamond_la_SOURCES =
 
 # because we are merging all the libraries below into the massive library here,
 # don't LIBADD .la files in subdirectories (or multiple definitions will occur)
-libopendiamond_la_LIBADD = libauth/libauth.la libdconfig/libdconfig.la \
+libopendiamond_la_LIBADD = libdconfig/libdconfig.la \
 	libdctl/libdctl.la libfilter/libfilter.la \
 	libfilterexec/libfilterexec.la liblog/liblog.la \
 	libodisk/libodisk.la libsearchlet/libsearchlet.la \
