--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,6 +1,6 @@
 noinst_PROGRAMS = odisk_test attr_test odisk_idx del_obj \
 	odisk_setoid cli_test test_log \
-	name_test dconf_test actest astest test_dctl \
+	name_test dconf_test test_dctl \
 	test_ring test_rtimer test_rstat test_rcomb
 
 LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
