--- a/src/lib/libtools/Makefile.am
+++ b/src/lib/libtools/Makefile.am
@@ -1,8 +1,8 @@
 noinst_LTLIBRARIES = libtools.la
 
 libtools_la_SOURCES = ring.c rtimer_std.c rtimer.c sig_calc.c \
-	rstat.c rgraph.c rcomb.c user.c file_tools.c ports.c \
+	rgraph.c rcomb.c user.c file_tools.c ports.c \
 	rtimer_common.h rtimer_papi.h rtimer_std.h ports.h
 
 pkginclude_HEADERS = ring.h lib_tools.h queue.h sig_calc.h rtimer.h \
-	rcomb.h rgraph.h rstat.h
+	rcomb.h rgraph.h
