--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -1,1 +1,1 @@
-pkginclude_HEADERS = diamond_consts.h diamond_types.h sys_attr.h
+pkginclude_HEADERS = diamond_consts.h diamond_types.h sys_attr.h diamond_features.h
