Remove rcomb and rgraph from public headers

--- a/src/lib/libtools/Makefile.am
+++ b/src/lib/libtools/Makefile.am
@@ -3,6 +3,6 @@ noinst_LTLIBRARIES = libtools.la
 libtools_la_SOURCES = ring.c rtimer_std.c rtimer.c sig_calc.c \
 	rgraph.c rcomb.c user.c file_tools.c ports.c \
 	rtimer_common.h rtimer_papi.h rtimer_std.h ports.h \
-	rtimer.h sig_calc_priv.h tools_priv.h
+	rtimer.h sig_calc_priv.h tools_priv.h rcomb.h rgraph.h
 
-pkginclude_HEADERS = ring.h lib_tools.h queue.h sig_calc.h rcomb.h rgraph.h
+pkginclude_HEADERS = ring.h lib_tools.h queue.h sig_calc.h
