Take out lib_filter_sys.h from public headers

--- a/src/lib/libfilter/Makefile.am
+++ b/src/lib/libfilter/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LTLIBRARIES = libfilter.la
 
-libfilter_la_SOURCES = lib_filter.c lib_filter_priv.h
+libfilter_la_SOURCES = lib_filter.c lib_filter_priv.h lib_filter_sys.h
 
-pkginclude_HEADERS = lib_filter.h lib_filter_sys.h
+pkginclude_HEADERS = lib_filter.h
