--- a/src/lib/libtools/Makefile.am
+++ b/src/lib/libtools/Makefile.am
@@ -5,4 +5,4 @@ libtools_la_SOURCES = ring.c rtimer_std.c rtimer.c sig_calc.c \
 	rtimer_common.h rtimer_papi.h rtimer_std.h ports.h \
 	rtimer.h sig_calc_priv.h tools_priv.h rcomb.h rgraph.h
 
-pkginclude_HEADERS = ring.h lib_tools.h queue.h sig_calc.h
+pkginclude_HEADERS = ring.h lib_tools.h sig_calc.h
