--- a/src/lib/libsearchlet/Makefile.am
+++ b/src/lib/libsearchlet/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libsearchlet.la
 
 libsearchlet_la_SOURCES = lib_searchlet.c ls_background.c ls_device.c \
-	ls_dctl.c log_impl.h lib_search_priv.h
+	ls_dctl.c log_impl.h lib_search_priv.h dctl_socket.h log_socket.h
 
-pkginclude_HEADERS = lib_searchlet.h dctl_socket.h log_socket.h
+pkginclude_HEADERS = lib_searchlet.h
