--- a/src/lib/liblog/Makefile.am
+++ b/src/lib/liblog/Makefile.am
@@ -3,3 +3,5 @@ noinst_LTLIBRARIES = liblog.la
 liblog_la_SOURCES = lib_log.c
 
 pkginclude_HEADERS = lib_log.h
+
+AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
