--- a/src/lib/libsearchlet/Makefile.am
+++ b/src/lib/libsearchlet/Makefile.am
@@ -4,3 +4,5 @@ libsearchlet_la_SOURCES = lib_searchlet.c ls_background.c ls_device.c \
 	ls_dctl.c log_impl.h lib_search_priv.h dctl_socket.h log_socket.h
 
 pkginclude_HEADERS = lib_searchlet.h
+
+AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
