--- a/src/lib/libtools/Makefile.am
+++ b/src/lib/libtools/Makefile.am
@@ -6,3 +6,5 @@ libtools_la_SOURCES = ring.c rtimer_std.c rtimer.c sig_calc.c \
 	rtimer.h sig_calc_priv.h tools_priv.h rcomb.h rgraph.h ring.h
 
 pkginclude_HEADERS = lib_tools.h sig_calc.h
+
+AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
