--- a/src/lib/transport/socket/common/Makefile.am
+++ b/src/lib/transport/socket/common/Makefile.am
@@ -19,3 +19,5 @@ rpc_client_content_xdr.h: rpc_preamble_xdr.h
 %_client.h %_server.h %_minirpc.c %_minirpc.h %_xdr.c %_xdr.h: %.mx
 	$(MINIRPCGEN) $<
 
+
+AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
