Perform some suggested things by libtoolize

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = sqlite common lib adiskd tools tests target debian
 
 EXTRA_DIST = CREDITS LICENSE INSTALL
 
+ACLOCAL_AMFLAGS = -I m4
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = opendiamond.pc
