Add snapshot of the new dataretriever backend for adiskd

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -75,6 +75,7 @@ AC_CONFIG_FILES([
 Makefile
 adiskd/Makefile
 common/Makefile
+dataretriever/Makefile
 sqlite/Makefile
 lib/Makefile
 lib/libdconfig/Makefile
