Switch from libcurl to libsoup
The makefile changes outside of libodisk are a result of other places in
the code that need to access object attributes, for which they have to
include odisk_priv.h to get access to obj->attr_info because obj_attr.h
by itself is not sufficient.

--- a/src/adiskd/Makefile.am
+++ b/src/adiskd/Makefile.am
@@ -3,4 +3,5 @@ bin_PROGRAMS = adiskd
 adiskd_SOURCES = \
 	adiskd.c search_state.c background.c search_state.h
 
+AM_CPPFLAGS += $(LIBSOUP_CFLAGS)
 adiskd_LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
