--- a/src/configure.ac
+++ b/src/configure.ac
@@ -48,8 +48,8 @@ PKG_CHECK_MODULES(MINIRPC, [minirpc > 0.2])
 MINIRPCGEN="`pkg-config --variable=MINIRPCGEN minirpc`"
 AC_SUBST(MINIRPCGEN)
 
-# libcurl
-PKG_CHECK_MODULES(LIBCURL, [libcurl])
+# libsoup
+PKG_CHECK_MODULES(LIBSOUP, [libsoup-2.4 >= 2.24])
 
 # libs
 AC_SEARCH_LIBS([sqrt], [m],, AC_MSG_FAILURE([cannot find math library]))
