--- a/src/lib/libodisk/Makefile.am
+++ b/src/lib/libodisk/Makefile.am
@@ -1,8 +1,7 @@
 noinst_LTLIBRARIES = libodisk.la
 
 libodisk_la_SOURCES = odisk.c obj_attr.c dataretriever.c \
-    odisk_priv.h obj_attr.h lib_odisk.h \
-    uri_util.c uri_util.h
+    odisk_priv.h obj_attr.h lib_odisk.h
 
-AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS) $(LIBCURL_CFLAGS)
-AM_LDFLAGS = $(LIBCURL_LIBS)
+AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS) $(LIBSOUP_CFLAGS)
+AM_LDFLAGS = $(LIBSOUP_LIBS)
