Add scopelist retrieval to the data retriever.
Get a list of object uri's from the data retriever.
Add search start/stop functions.
Track total object count estimate <objectlist count="N">.
Updating of object count estimate by dataretrievers <count adjust=N">.
Remove libsoup/soup.h dependency in odisk_priv.h.

--- a/src/lib/transport/socket/hoststub/Makefile.am
+++ b/src/lib/transport/socket/hoststub/Makefile.am
@@ -5,4 +5,4 @@ libhoststub_la_SOURCES = hstub_api.c hstub_data.c hstub_main.c hstub_socket.c \
 
 AM_CPPFLAGS += -I$(top_builddir)/lib/transport/socket/common
 
-AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS) $(LIBSOUP_CFLAGS)
+AM_CPPFLAGS += $(OPENDIAMOND_LIB_CPPFLAGS)
