--- a/src/dataretriever/Makefile.am
+++ b/src/dataretriever/Makefile.am
@@ -1,3 +1,16 @@
-PYLIBS = dataretriever/__init__.py dataretriever/util.py \
-	 dataretriever/diamond_store.py
-EXTRA_DIST = dataretriever.py $(PYLIBS)
+EXTRA_DIST = setup.py dataretriever __init__.py util.py diamond_store.py
+
+all-local: setup.py $(EXTRA_DIST)
+	$(PYTHON) setup.py build
+
+install-exec-local:
+	$(PYTHON) setup.py install --prefix=$(DESTDIR)$(prefix)
+	
+uninstall-local:
+	$(RM) $(DESTDIR)$(pythondir)/dataretriever*.egg-info
+	$(RM) $(DESTDIR)$(bindir)/dataretriever
+	$(RM) -r $(DESTDIR)$(pythondir)/dataretriever
+	
+clean-local:
+	$(RM) -r build
+
