--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,3 +1,3 @@
-noinst_PROGRAMS = cli_test test_log name_test
+noinst_PROGRAMS = test_log
 
 LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
