--- a/src/lib/libscope/scope.desktop
+++ b/src/lib/libscope/scope.desktop
@@ -3,6 +3,7 @@ Version=1.0
 Type=Application
 Encoding=UTF-8
 Name=Diamond Scope Handler
-Exec=diamond-newscope %f
-Icon=gnome-terminal.png
+Exec=diamond-newscope %F
 MimeType=application/x-diamond-scope;
+NoDisplay=true
+
