Stripped down scopeserver components.
Except for the jquery dependency of gatekeeper this should be pretty
much self contained and could be dropped without too many changes into
any existing django setup.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
-SUBDIRS = sqlite common lib adiskd dataretriever tools tests target debian
-
+SUBDIRS = sqlite common lib adiskd dataretriever scopeserver tools tests \
+	target debian
 
 EXTRA_DIST = CREDITS LICENSE INSTALL
 
