Move scopeserver components around to avoid namespace conflicts.
When we start a django app named "scopeserver" python's search path gets
confused between the created app and lib/python/scopeserver. As a result
the server is unable to start because it can't find the settings file.

--- a/src/scopeserver/Makefile.am
+++ b/src/scopeserver/Makefile.am
@@ -1,11 +1,19 @@
-EXTRA_DIST = setup.py __init__.py opendiamond.py \
-    templates/base.html templates/simple_form.html \
-    flickr/__init__.py flickr/forms.py flickr/views.py \
-    gatekeeper/__init__.py gatekeeper/admin.py gatekeeper/forms.py \
-    gatekeeper/models.py gatekeeper/views.py \
-    gatekeeper/templates/gatekeeper.html \
-    gatekeeper/templates/gatekeeper_manage.html \
-    vmfind/__init__.py vmfind/forms.py vmfind/views.py
+EXTRA_DIST = setup.py opendiamond/__init__.py opendiamond/helpers.py \
+    scopeserver_flickr/__init__.py \
+    scopeserver_flickr/forms.py \
+    scopeserver_flickr/views.py \
+    scopeserver_flickr/templates/simple_form.html \
+    scopeserver_gatekeeper/__init__.py \
+    scopeserver_gatekeeper/admin.py \
+    scopeserver_gatekeeper/forms.py \
+    scopeserver_gatekeeper/models.py \
+    scopeserver_gatekeeper/views.py \
+    scopeserver_gatekeeper/templates/gatekeeper.html \
+    scopeserver_gatekeeper/templates/gatekeeper_manage.html \
+    scopeserver_vmfind/__init__.py \
+    scopeserver_vmfind/forms.py \
+    scopeserver_vmfind/views.py \
+    scopeserver_vmfind/templates/simple_form.html
 
 all-local: setup.py $(EXTRA_DIST)
 	$(PYTHON) setup.py build
@@ -14,8 +22,12 @@ install-exec-local:
 	$(PYTHON) setup.py install --prefix=$(DESTDIR)$(prefix)
 	
 uninstall-local:
+	$(RM) $(DESTDIR)$(pythondir)/opendiamond*.egg-info
+	$(RM) -r $(DESTDIR)$(pythondir)/opendiamond
 	$(RM) $(DESTDIR)$(pythondir)/scopeserver*.egg-info
-	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver
+	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver_flickr
+	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver_gatekeeper
+	$(RM) -r $(DESTDIR)$(pythondir)/scopeserver_vmfind
 	
 clean-local:
 	$(RM) -r build
