--- a/src/scopeserver/setup.py.in
+++ b/src/scopeserver/setup.py.in
@@ -6,17 +6,16 @@ setup(
     name = "scopeserver",
     version = "@VERSION@",
     packages = [
-	'scopeserver',
-	'scopeserver.flickr',
-	'scopeserver.gatekeeper',
-	'scopeserver.vmfind',
+	'opendiamond',
+	'scopeserver_flickr',
+	'scopeserver_gatekeeper',
+	'scopeserver_vmfind',
     ],
-    package_dir = { 'scopeserver': '' },
     package_data = {
-	'scopeserver':		  [ 'templates/*.html' ],
-	'scopeserver.gatekeeper': [ 'templates/*.html' ],
+	'scopeserver_flickr':	  [ 'templates/*.html' ],
+	'scopeserver_gatekeeper': [ 'templates/*.html' ],
+	'scopeserver_vmfind':	  [ 'templates/*.html' ],
     },
-
     author = "OpenDiamond project, Carnegie Mellon University",
     author_email = "diamond@cs.cmu.edu",
     description = "Scope server components for OpenDiamond",
