Add datamonster program to test optimal objs/sec throughput.

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,3 +1,5 @@
-noinst_PROGRAMS = test_log
+noinst_PROGRAMS = test_log datamonster
 
 LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
+
+datamonster_LDADD = ${GLIB2_LIBS}
