Add jpeg decoding to datamonster.
Also add missing copyright blurb.

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -66,6 +66,10 @@ AC_SEARCH_LIBS([pthread_create],
 AC_SEARCH_LIBS([clock_gettime],
 	[rt],, AC_MSG_FAILURE([cannot find POSIX clock functions]))
 
+# not really critical, only used by datamonster test program
+AC_CHECK_LIB([jpeg], [jpeg_read_scanlines], [true],
+	     AC_MSG_FAILURE([cannot find jpeg library]))
+AC_CHECK_HEADERS(jpeglib.h)
 
 # some options and includes
 AC_SUBST(AM_CPPFLAGS, ['-D_REENTRANT -I$(top_srcdir)/common -I$(top_srcdir)/lib/libdconfig -I$(top_srcdir)/lib/libdctl -I$(top_srcdir)/lib/libfilter -I$(top_srcdir)/lib/libfilterexec -I$(top_srcdir)/lib/liblog -I$(top_srcdir)/lib/libodisk -I$(top_srcdir)/lib/libscope -I$(top_srcdir)/lib/libsearchlet -I$(top_srcdir)/lib/libtools -I$(top_srcdir)/lib/transport/socket/common -I$(top_srcdir)/lib/transport/socket/hoststub -I$(top_srcdir)/lib/transport/socket/storagestub -DG_DISABLE_DEPRECATED -DG_DISABLE_SINGLE_INCLUDES'])
