--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -2,4 +2,4 @@ noinst_PROGRAMS = test_log datamonster
 
 LDADD = $(top_builddir)/lib/libopendiamond.la ${GLIB2_LIBS}
 
-datamonster_LDADD = ${GLIB2_LIBS}
+datamonster_LDADD = ${GLIB2_LIBS} -ljpeg
