Redo some automake/autoconf stuff

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -10,19 +10,22 @@
 #  RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT
 #
 
-AC_INIT([opendiamond], [5.0.7], [diamond@cs.cmu.edu])
+AC_INIT([OpenDiamond], [5.0.7], [diamond@cs.cmu.edu], [opendiamond], [http://diamond.cs.cmu.edu/])
+AM_INIT_AUTOMAKE([foreign 1.11.1 dist-xz])
+AM_SILENT_RULES([yes])
+
 AC_PREREQ([2.59])
+LT_PREREQ([2.2.5])
+
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([foreign 1.8.5])
 AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_CC
 AM_PROG_LEX
 AM_PATH_PYTHON([2.5])
 
-AC_DISABLE_STATIC
-AC_PROG_LIBTOOL
+LT_INIT([disable-static])
 
 # Check for recent pkg-config which supports Requires.private
 # (snippet taken from cairo configure.in)
