Implement lf_log

--- a/src/filter-runner/Makefile.am
+++ b/src/filter-runner/Makefile.am
@@ -1,5 +1,7 @@
 libexec_PROGRAMS = filter-runner
 
-filter_runner_SOURCES = filter-runner.c
+filter_runner_SOURCES = filter-runner.c callbacks.c util.c
 
 filter_runner_LDADD = ${GLIB2_LIBS}
+
+filter_runner_LDFLAGS = -export-dynamic
