--- a/src/filter-runner/Makefile.am
+++ b/src/filter-runner/Makefile.am
@@ -1,6 +1,7 @@
 pkglibexec_PROGRAMS = filter-runner
 
-filter_runner_SOURCES = filter-runner.c callbacks.c util.c
+filter_runner_SOURCES = filter-runner.c callbacks.c filter-runner-util.c \
+	filter-runner.h filter-runner-util.h
 
 filter_runner_LDADD = ${GLIB2_LIBS}
 
