Preliminary filter-runner support in filterexec

--- a/src/lib/libfilterexec/Makefile.am
+++ b/src/lib/libfilterexec/Makefile.am
@@ -2,7 +2,8 @@ AM_LFLAGS = -olex.yy.c
 
 noinst_LTLIBRARIES = libfilterexec.la
 
-AM_CPPFLAGS += -I../../sqlite
+AM_CPPFLAGS += -I../../sqlite -DFILTER_RUNNER_PATH=\"$(pkglibexecdir)/filter-runner\"
+
 libfilterexec_la_LIBADD = $(GLIB2_LIBS) ../../sqlite/libsqlite.la
 libfilterexec_la_SOURCES = filter_exec.c filter_spec.l fexec_stats.c \
 	fexec_misc.c fexec_opt.c fexec_bypass.c ocache.c cache_filter.c \
