Remove old broken volcano

--- a/src/tools/volcano/Makefile.am
+++ b/src/tools/volcano/Makefile.am
@@ -1,6 +1,1 @@
-bin_PROGRAMS = volcano
-
-AM_CPPFLAGS += -I../../sqlite
-volcano_LDADD = $(top_builddir)/lib/libopendiamond.la ../../sqlite/libsqlite.la
-
-volcano_SOURCES = volcano.c helper.c helper.h
+EXTRA_DIST = volcano.py
